feat: rules and styling

--- a/markdown/src/assets/style.css
+++ b/markdown/src/assets/style.css
@@ -1,5 +1,7 @@
 body {
     background-color: aqua;
+    background-image: url("./background.jpg");
+    color: white;
 }
 .preview {
     display: flex;
@@ -7,6 +9,10 @@ body {
     align-items: center;
     flex-direction: row;
     /* margin-right: 3rem; */
+}
+.info{
+    background-color:black;
+    color: white;
 }
 h1 {
     margin-left: 40%;
