--- a/markdown/src/assets/style.css
+++ b/markdown/src/assets/style.css
@@ -13,7 +13,7 @@ body {
 .info{
     background-color:black;
     color: white;
-    padding: 10px;
+    /* padding: 10px; */
     border: none;
     outline: none;
     border-radius: 5px;
