--- a/markdown/src/assets/style.css
+++ b/markdown/src/assets/style.css
@@ -33,3 +33,24 @@ body {
     border-radius: 5px;
     overflow: auto;
 }
+/* width */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(97, 89, 89); 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #524b4b; 
+}
