--- a/markdown/src/assets/style.css
+++ b/markdown/src/assets/style.css
@@ -10,18 +10,15 @@ body {
     justify-content: space-evenly !important;
     align-items: center;
     flex-direction: row;
-    /* margin-right: 3rem; */
 }
 .info{
     background-color:black;
-    color: white;
-    /* padding: 10px; */
+    color: #ffffff;
     border: none;
     outline: none;
     border-radius: 5px;
     word-wrap: break-word;
     overflow: auto;
-    /* overflow-y: scroll; */
 }
 .heading{
     margin-left: 35%;
@@ -30,30 +27,22 @@ body {
 .inf {
     background-color:black;
     color: white;
-    /* padding: 10px; */
     border: none;
     outline: none;
     border-radius: 5px;
     overflow: auto;
 }
-/* width */
 ::-webkit-scrollbar {
   width: 20px;
 }
-
-/* Track */
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey; 
   border-radius: 10px;
 }
- 
-/* Handle */
 ::-webkit-scrollbar-thumb {
   background: rgb(97, 89, 89); 
   border-radius: 10px;
 }
-
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #524b4b; 
 }
@@ -61,8 +50,4 @@ body {
     justify-content: center;
     align-items: center;
     margin-left: 35%;
-}
-a:hover {
-  text-decoration:underline;
-  color: blue;
 }
